Current:
Stephane Peter (Codehost) - Mon Mar  6 18:00:40 PST 2006
 * Added support for SELinux context attributes for files
 * GTK2 cleanups and fixes to use libxml2
Jeremy White (Codeweavers) - Tue Feb  7 15:37:28 PST 2006
 * Preliminary optional GTK2 support
 * Added support for program_to_start XML element
 * Do not link with GPM library when not needed
Ryan C. Gordon (icculus.org) - Fri Jan 27 16:35:25 EST 2006
 * Intel Mac support.
Ryan C. Gordon (icculus.org) - Fri Jun 17 00:15:51 EDT 2005
 * Patched so binary built on MacOSX Tiger will still run on Panther.
Ryan C. Gordon (icculus.org) - Wed May 18 11:40:10 EDT 2005
 * Added appbundleid and appbundledesc to setup.xml install tag (MacOS only).
Ryan C. Gordon (icculus.org) - Tue May 17 12:21:23 EDT 2005
 * Added .rar archive plugin.
Ryan C. Gordon (icculus.org) - Sat Nov 20 08:42:16 EST 2004
 * Minor carbon_ui tweaks and corrections to update function.
Ludwig Nussel - Wed Nov 10 14:21:21 PST 2004
 * Added support for inline binary scripts.
Ludwig Nussel - Mon Nov  1 19:39:21 PST 2004
 * New 'suffix' attribute to the files element to force plugins to be used.
 * Fixes in ZIP plugin
 * New 'productdir' attribute for meta-installers to change the directory
   before executing the new installer.
 * GTK UI updates for clarification
Ludwig Nussel - Mon Sep 20 18:09:29 PDT 2004
 * Added feature attribute for 'require' tags.
 * No longer write log to /tmp/uninstall.log when uninstalling.
Stephane Peter (Codehost) - Tue Aug  3 19:32:48 PDT 2004
 * Added 'args' attribute for binary tags.
Ryan C. Gordon (icculus.org) - Thu May 27 12:39:23 EDT 2004
 * Carbon UI now handles Apple-Q quit hotkey at end of installation correctly.
Ryan C. Gordon (icculus.org) - Thu 20 May 06:05:23 EDT 2004
 * Carbon UI no longer blocks installation while README is showing.
Rob Crittenden - Fri Apr  9 18:03:22 PDT 2004
 * Allow scripts to require CDs and specify a size.
Ryan C. Gordon (Epic Games) - Thu Apr  8 17:57:37 EDT 2004